--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
