--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "material-table": "^1.69.3",
+    "material-ui": "^1.0.0-beta.47",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
